module(
    name = "leetcode",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.27.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "googletest", version = "1.14.0")

# Provide cross-platform autocomplete for C language family
# Usage: `bazel run @hedron_compile_commands//:refresh_all`
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# Hermetic LLVM toolchain
bazel_dep(name = "toolchains_llvm", version = "0.10.3")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "16.0.4",
    sysroot = {
        "linux-x86_64": "@@org_chromium_sysroot_linux_x64//:sysroot",
    },
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
