load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_test(
    name = "0098",
    size = "small",
    srcs = ["test.py"],
    imports = ["./"],
    main = "test.py",
    deps = [
        ":main",
        "//python/lib:tree",
    ],
)

py_library(
    name = "main",
    srcs = ["main.py"],
    deps = ["//python/lib:tree"],
)
